--- a/EmergencyHoundWeb/Views/Home/Index.cshtml
+++ b/EmergencyHoundWeb/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             <p class="text-center m-b-l">
                 @*@Html.ActionLink("Join Our Mailing List", "MailingList", "Home", new object { }, new { @class = "btn btn-lg btn-dark m-sm" })*@
                 @Html.ActionLink("Register", "Register", "Account", new object { }, new { @class = "btn btn-lg btn-dark m-sm" })
-                @Html.ActionLink("Sign In", "Login", "Account", new object { }, new { @class = "btn btn-lg btn-warning b-white bg-empty m-sm" })
+                @Html.ActionLink("Sign In", "Index", "Dashboard", new object { }, new { @class = "btn btn-lg btn-warning b-white bg-empty m-sm" })
             </p>
         </div>
         <div class="padder">
