--- a/EmergencyHoundWeb/Views/Shared/_LayoutPub.cshtml
+++ b/EmergencyHoundWeb/Views/Shared/_LayoutPub.cshtml
@@ -31,7 +31,7 @@
                         @Html.ActionLink("Background", "About", "Home")
                     </li>
                     <li>
-                        @Html.ActionLink("Sign In", "Login", "Account")
+                        @Html.ActionLink("Sign In", "Index", "Dashboard")
                     </li>
                     <li>
                         <div class="m-t-sm">
