--- a/EmergencyHoundWeb/Views/Home/Index.cshtml
+++ b/EmergencyHoundWeb/Views/Home/Index.cshtml
@@ -160,17 +160,13 @@
             </div>
         </div>
     </div>
-    <div id="newsletter" class="bg-white clearfix wrapper-lg">
+    @*<div id="newsletter" class="bg-white clearfix wrapper-lg">
         <div class="container text-center m-t-xl m-b-xl" data-ride="animated" data-animation="fadeIn">
             <h2>Mailing List</h2>
             <p>Do you want to be notified when Emergency Hound is ready? Subscribe to our mailing list to get periodic updates.</p>
             <div class="form-inline m-t-xl m-b-xl">
-                <!--
-                          <div class="form-group">
-                            <input class="form-control input-lg" placeholder="Your email" data-ride="animated" data-animation="fadeInLeftBig" data-delay="300">
-                          </div> -->
                 @Html.ActionLink("Join Mailing List", "MailingList", "Home", new object { }, new { @class = "btn btn-lg btn-dark m-sm" })
             </div>
         </div>
-    </div>
+    </div>*@
 </section>
