Various small bug fixes.

--- a/EmergencyHoundWeb/Views/Admin/Tasks.cshtml
+++ b/EmergencyHoundWeb/Views/Admin/Tasks.cshtml
@@ -42,6 +42,9 @@
 
             </section>
             <p>
+                Retrieve the latest data from FEMAs Resource Typing Library Tool (RTLT) and populate Emergency Hound's resource type reference data. 
+            </p>
+            <p>
                 @Html.ActionLink("Retrieve Data from RTLT", "TaskPullFromRTLT", "Admin", new object { }, new { @class = "btn btn-s-md btn-primary" })
             </p>
 
