--- a/EmergencyHoundWeb/Views/Incident/Map.cshtml
+++ b/EmergencyHoundWeb/Views/Incident/Map.cshtml
@@ -129,9 +129,9 @@
     function PopulateEPAData(latBot, latTop, longWest, longEast, map, info_window) {
 
         var i = 0;
-
         //GET DATA FROM EPA
         var site = 'http://iaspub.epa.gov/enviro/efservice/multisystem/minLatitude/' + latBot + '/maxLatitude/' + latTop + '/minLongitude/' + longWest + '/maxLongitude/' + longEast + '/rows/1:100';
+        console.log(site);
         var yql = 'http://query.yahooapis.com/v1/public/yql?q=' + encodeURIComponent('select * from xml where url="' + site + '"') + '&format=xml&callback=?';
         // Request that YSQL string, and run a callback function.
         // Pass a defined function to prevent cache-busting.
